# SpotServe

./: LICENSE  README.md  sync_code.py  zip_ae.sh
FasterTransformer/: CMakeLists.txt  README.md  send_tensor.py
FasterTransformer/cmake/Modules/: FindNCCL.cmake
ParamsClient/: CMakeLists.txt  README.md  simple_share.cc  simple_tensor.cu  simple_tensor.h
ParamsClient/src/: CMakeLists.txt
ParamsClient/src/client/: CMakeLists.txt  TensorStorage.cc  TensorStorage.h  TensorStorageLayer.cc  TensorStorageLayer.h  TensorWrapper.hpp  layerConfig.cc  layerConfig.h  main.cc  p2pOp.hpp
ParamsClient/src/kernels/: CMakeLists.txt  matrix_transpose_kernels.cu  matrix_transpose_kernels.h
ParamsClient/src/utils/: CMakeLists.txt  cuda_utils.h  logger.h  memory_utils.cu  memory_utils.h  mpi_utils.cc  mpi_utils.h  nccl_utils.cc  nccl_utils.h  tcp_utils.cc  tcp_utils.h
ParamsClient/test/: CMakeLists.txt  check_p2p_comm.cc  check_param.cc  check_transpose.cc
ckpt/: generate_random_gpt_ckpt.py
elastic-switch/: README.md  main.py
elastic-switch/global_server/: HotSwitch.py  KMmatcher.py  ProcThread.py  Switch.py  TcpThread.py  main.py
elastic-switch/profile/T4-1x/: megatron_345M_profile.json  megatron_6.7B_profile.json  megatron_h2048_profile.json  megatron_h2560_profile.json  megatron_h6144_profile.json
elastic-switch/profile/T4-4x/: megatron_345M_profile.json  megatron_6.7B_profile.json  megatron_h2048_profile.json  megatron_h2560_profile.json  megatron_h6144_profile.json  megatron_h7168_profile.json
elastic-switch/profile/V100-4x/: 20B.json  345M.json  6.7B.json
elastic-switch/scheduler/: api_server.py  api_server_old.py  commands.py  constants.py  scheduler.py  trace_replayer.py  utils.py
elastic-switch/scheduler/parallel/: solver.py
elastic-switch/scripts/: aws_run_scheduler.sh  aws_run_scheduler30B.sh  aws_run_scheduler6.7B.sh  aws_run_scheduler_20B_od.sh  aws_run_scheduler_20B_workload.sh  aws_run_scheduler_ab_cache.sh  aws_run_scheduler_ab_match.sh  aws_run_scheduler_ab_overlap.sh  aws_run_scheduler_ab_plain.sh  debug_run_scheduler.sh  gen_gpt_ckpt.sh  gen_query.sh  gen_real_query.sh  generate_gpt_ckpt.py  run_global_server.sh  run_latency_test.py  run_param_server_test.sh  run_scheduler.sh  run_switch_test.sh  test_latency.sh
elastic-switch/scripts_ae/: ablation_plot.py  aws_ablation.sh  aws_e2e.sh  aws_ondemand.sh  aws_workload.sh  env.sh  kill_all.sh  plot.py  tradeoff_plot.py
elastic-switch/tools/: test_s3.py  trace_gen.py
elastic-switch/trace/: gen_dummy_trace.py  gen_query.py  gen_real_query.py  hostfile  hostfile_aws_1x  hostfile_aws_T4  hostfile_local  hostnameT4  query_trace.txt  test.txt
elastic-switch/trace/query/: arrival-rates.csv  query3072_tpt1.2_cv6.txt  query3072_tpt3_cv6.txt  query6144_tpt1.5_cv6.txt  query6144_tpt1.8_cv6.txt  query6144_tpt2.5_cv6.txt  query6144_tpt2_cv6.txt  query_realAr_cv6.txt  query_seq.csv  query_seq128.csv  query_seq512.csv  query_tpt0.1.txt  query_tpt0.2.txt  query_tpt0.25_cv6.txt  query_tpt0.2_cv6.txt  query_tpt0.3.txt  query_tpt0.35_cv1.txt  query_tpt0.35_cv12.txt  query_tpt0.35_cv16.txt  query_tpt0.35_cv2.txt  query_tpt0.35_cv32.txt  query_tpt0.35_cv4.txt  query_tpt0.35_cv6.txt  query_tpt0.4.txt  query_tpt0.45_cv6.txt  query_tpt0.4_cv1.txt  query_tpt0.4_cv2.txt  (+11 more)
elastic-switch/util/: parse_latency.py  util.py  zmq_tool.py
(+105 files in other folders)
